[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-env"
version = "0.1.0"
description = "Incident response simulation environment for agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=1.57.0",
    "httpx>=0.27.2",
    "requests>=2.32.3",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
